header section completed for now

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 :root{
     --color-background: #1f1f38;
-    --color-secundary: #00C9A7;
+    --color-secondary: #00C9A7;
     --color-primary: #845EC2;
     --color-primary-lighter: #F3c5FF;
     --color-white: #fff;
