started on the contact me section

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,11 @@
 
 :root{
     --color-background: #1f1f38;
+    --color-background-variant: #29293d;
     --color-secondary: #00C9A7;
     --color-primary: #845EC2;
     --color-primary-lighter: #F3c5FF;
+    --color-primary-variant: #2f696d;
     --color-white: #fff;
     --color-light: #FEFEDF;
 
