--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,84 +1,86 @@
-.about__container{
-    display: grid;
-    grid-template-columns: 35% 50%;
-    gap: 15%;
+.about__container {
+  display: grid;
+  grid-template-columns: 35% 50%;
+  gap: 15%;
 }
 
-.about__me {
-    width: 100%;
-    aspect-ratio: 1/1;
-    border-radius: 2rem;
-    background: linear-gradient(
-        45deg,
-        transparent,
-        var(--color-primary),
-        transparent
-    );
-    display: grid;
-    place-items: center;
+.about__me{
+width: 100%;
+aspect-ratio: 1/1;
+border-radius: 2rem;
+background: linear-gradient(45deg,
+transparent, 
+var(--color-primary),
+transparent
+);
+display: grid;
+place-items: center;
 }
 
-.about__me-image{
-    border-radius: 2rem;
-    overflow: hidden;
-    transform: rotate(10deg);
-    transition: var(--transition);
-    /* aspect-ratio: 1/1; */
+.about__me-image {
+border-radius: 2rem;
+overflow: hidden;
+transform: rotate(10deg);
+transition: var(--transition);
 }
 
-.about__me-image:hover{
-    transform: rotate(0);
+.about__me-image:hover {
+    transform: rotate(0deg);
 }
 
 .about__cards {
     display: grid;
-    grid-template-columns: (3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
 }
 
 .about__card {
-background: var(--color-primary);
-border: 1px solid transparent;
-border-radius: 1rem;
-padding: 2rem;
-text-align: center;
-max-width: 200px;
-transition: var(--transition);
+    background: var(--color-primary);
+    border: 1px solid transparent;
+    border-radius: 1rem;
+    padding: 2 rem;
+    text-align: center;
 }
 
-.about__card:hover{
+.about__card:hover {
     background: transparent;
-    border-color: var(--color-primary-variant);
+    boarder-color: var(--color-primary-variant);
+    background: var(--color-background-variant);
     cursor: default;
 }
+/* .about__card:hover .about__icon {
+    color: var(--color-primary)
+} */
 
 .about__icon {
-    color: var(--color-primary);
+    color: var(--color-light);
+    padding: 3rem 0 0 0;
     font-size: 1.4rem;
     margin-bottom: 1rem;
 }
 
-.about__cards h5 {
-    font-size: 0.95;
+.about__card h5{
+    font-size: 0.95rem;
 }
-.about__cards small{
+
+.about__card small {
     font-size: 0.7rem;
     color: var(--color-light);
 }
 
-.about__description p {
+.about__content {
     margin: 2rem 0 2.6rem;
-    color: var(--color-light);
-    text-align: center;
+    color: var();
 }
 
-.about__description a {
-   align-items: center;
+.about__content p {
+    margin-bottom: 2rem;
+    color: var(--color-light);
 }
 
 /* Making it resposive for tablets */
 @media screen and (max-width: 1028px){
-    .about__container {
+    .about__container{
         grid-template-columns: 1fr;
         gap: 0;
     }
@@ -88,28 +90,28 @@ transition: var(--transition);
         margin: 2rem auto 4rem;
     }
 
-    .about__description p{
+    .about__content p{
         margin: 1rem 0 1.5rem;
     }
 }
 
 /* Making it resposive for mobile */
 @media screen and (max-width: 600px){
-    .about_me{
-        width: 65%;
-        margin: 0 auto 3rem;
+   .about__me{
+    width: 65%;
+    margin: 0 auto 3rem;
+   }
+
+   .about__cards{
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+   }
+
+   .about__content{
+    text-align: center;
     }
 
-    .about__cards{
-        grid-template-columns: 1fr 1fr;
-        gap: 1rem;
-    }
-
-    .about__description{
-        text-align: center;
-    }
-
-    .about__description p{ 
+    .about__content p{
         margin: 1.5rem 0;
-}
+    }
 }
