--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 :root{
     --color-background: #1f1f38;
-    --color-background-variant: #29293d;
+    --color-background-variant:#7266A1;
     --color-secondary: #00C9A7;
     --color-primary: #845EC2;
     --color-primary-lighter: #F3c5FF;
