--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,20 +1,70 @@
-.experience_container {
-    display: grid;
-    grid-template-rows: 1fr 1fr 1fr;
-    height: 200px;
-    width: 400px;
+.experience__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
 }
 
-.experience_card {
-    background: var(--color-primary);
-    border: 1px solid transparent;
-    border-radius: 1rem;
-    padding: 2rem;
-    text-align: center;
-    max-width: 200px;
+.experience__container > div {
+    background: var(--color-background-variant);
+    border-radius: 2rem;
+    padding: 2.4rem 5rem;
     transition: var(--transition);
-    /* min-height: 350px; */
-    /* min-width: 400px; */
-    /* aspect-ratio: 2/1; */
-    gap: 2rem;
+    border: 1px solid transparent;
+}
+
+.experience__container > div:hover {
+    border-color: var(--color-primary-variant);
+    background: transparent;
+    cursor: default;
+}
+
+.experience__container > div > h3 {
+    text-align: center;
+    margin-bottom: 2rem;
+    color: var(--color-primary);
+}
+
+.experience__content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 2rem;
+}
+
+.experience__details {
+    display: flex;
+    gap: 1rem;
+}
+
+.experience__details-icon {
+    margin-top: 6px;
+    color: var(--color-primary);
+}
+
+/* Making it resposive for tablets */
+@media screen and (max-width: 1028px){
+    .experience__container{
+        grid-template-columns: 1fr;
+    }
+
+    .experience__container > div{
+        padding: 2rem;
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .experience__content{
+        padding: 1rem;
+    }
+}
+
+/* Making it resposive for mobile */
+@media screen and (max-width: 600px){
+ .experience__container{
+    gap: 1rem;
+ }
+
+ .experience__container > div {
+    width: 100%;
+    padding: 2rem 1rem;
+ }
 }
