--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -31,6 +31,11 @@ gap: 1rem;
 margin-bottom: 1rem; 
 }
 
+.portfolio__project-img{
+    height: 300px;
+    width: 300px;
+}
+
 /* Making it resposive for tablets */
 @media screen and (max-width: 1028px){
    .portfolio__container{
