--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -10,6 +10,13 @@
     border-radius: 2rem;
     border: 1px solid transparent;
     transition: var(--transition);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+a{
+    margin: 0 10px;
 }
 
 .portfolio__items:hover {
@@ -20,15 +27,24 @@
 .portfolio__items-image {
     border-radius: 1.5rem;
     overflow: hidden;
+    align-items: center;
 }
 
-.portfolio__items h3{
-    margin: 1.2rem 
+/* .portfolio__items h3{
+    margin: 1.2rem;
+    text-align: center;
+} */
+
+.portfolio__item-title{
+    margin: 1rem;
+    text-align: center;
 }
 .portfolio__items-cta{
 display: flex;
-gap: 1rem;
-margin-bottom: 1rem; 
+justify-content: center;
+padding-left: 115px;
+/* align-items: center;
+margin-bottom: 1rem;  */
 }
 
 .portfolio__project-img{
