--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,7 +1,18 @@
+:root {
+    --color-background-variant: #ffffff;
+    --color-primary-variant: #000000;
+    --transition: 0.3s ease-in-out;
+}
+
 .portfolio__container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2.5rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2.5rem;
+}
+
+a {
+    margin: 0 10px;
+    align-items: center;
 }
 
 .portfolio__items {
@@ -13,10 +24,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-a{
-    margin: 0 10px;
+    justify-content: center; /* Add this line */
+    text-align: center; /* Center text */
 }
 
 .portfolio__items:hover {
@@ -28,43 +37,40 @@ a{
     border-radius: 1.5rem;
     overflow: hidden;
     align-items: center;
+    display: flex;
+    justify-content: center;
 }
 
-/* .portfolio__items h3{
-    margin: 1.2rem;
-    text-align: center;
-} */
-
-.portfolio__item-title{
+.portfolio__item-title {
+    display: flex;
+    justify-content: center;
     margin: 1rem;
-    text-align: center;
-}
-.portfolio__items-cta{
-display: flex;
-justify-content: center;
-padding-left: 115px;
-/* align-items: center;
-margin-bottom: 1rem;  */
 }
 
-.portfolio__project-img{
-    height: 300px;
-    width: 300px;
+.portfolio__items-cta {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem; /* Adjust margin as needed */
+    margin: 2rem;
 }
 
-/* Making it resposive for tablets */
-@media screen and (max-width: 1028px){
-   .portfolio__container{
-    grid-template-columns: 1fr 1fr;
-    gap: 1.2rem;
-   }
+.portfolio__project-img {
+    height: 400px;
+    width: 400px;
 }
 
-/* Making it resposive for mobile */
-@media screen and (max-width: 600px){
-   .portfolio__container{
-    grid-template-columns: 1fr;
-    gap: 1rem;
-   }
+/* Making it responsive for tablets */
+@media screen and (max-width: 1028px) {
+    .portfolio__container {
+        grid-template-columns: 1fr 1fr;
+        gap: 1.2rem;
+    }
 }
 
+/* Making it responsive for mobile */
+@media screen and (max-width: 600px) {
+    .portfolio__container {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
+}
