--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
     --color-background-variant:#7A52CC;
     --color-secondary: #00C9A7;
     --color-primary: #845EC2;
-    --color-primary-lighter: #A1A1CA;
+    --color-primary-lighter: #A3A3CC;
     --color-primary-darker: #272341;
     --color-white: #fff;
     --color-light: #FEFEDF;
