--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -49,6 +49,9 @@ header{
     padding: 5rem 1.5rem 1.5rem 1.5rem;   
 }
 
+.text{
+    color: var(--color-primary-lighter);
+}
 
 /* ------ Scroll Down button ---------- */
 .scroll_down{
@@ -75,5 +78,12 @@ header{
     }
     .header__socials, .scroll_down {
         display: none;
+    }
+
+    h2{
+        padding-bottom: 3rem;
+    }
+    .about__content {
+        margin-top: 2rem;
     }
 }
