--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -1,7 +1,12 @@
+:root {
+    --color-primary-variant: #000000;
+    --transition: 0.3s ease-in-out;
+}
+
 .portfolio__container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2.5rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2.5rem;
 }
 
 .portfolio__items {
@@ -10,6 +15,11 @@
     border-radius: 2rem;
     border: 1px solid transparent;
     transition: var(--transition);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* Add this line */
+    text-align: center; /* Center text */
 }
 
 .portfolio__items:hover {
@@ -20,35 +30,48 @@
 .portfolio__items-image {
     border-radius: 1.5rem;
     overflow: hidden;
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
 
-.portfolio__items h3{
-    margin: 1.2rem 
-}
-.portfolio__items-cta{
-display: flex;
-gap: 1rem;
-margin-bottom: 1rem; 
+.portfolio__item-title {
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
 }
 
-.portfolio__project-img{
-    height: 300px;
-    width: 300px;
+.portfolio__item-cta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem;
 }
 
-/* Making it resposive for tablets */
-@media screen and (max-width: 1028px){
-   .portfolio__container{
-    grid-template-columns: 1fr 1fr;
-    gap: 1.2rem;
-   }
+a{
+margin: 0 10px;
 }
 
-/* Making it resposive for mobile */
-@media screen and (max-width: 600px){
-   .portfolio__container{
-    grid-template-columns: 1fr;
-    gap: 1rem;
-   }
+.portfolio__item-image {
+    border-radius: 1.5rem;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+/* Making it responsive for tablets */
+@media screen and (max-width: 1028px) {
+    .portfolio__container {
+        grid-template-columns: 1fr 1fr;
+        gap: 1.2rem;
+    }
+}
+
+/* Making it responsive for mobile */
+@media screen and (max-width: 600px) {
+    .portfolio__container {
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
+}
