--- a/components/about/about.css
+++ b/components/about/about.css
@@ -1,27 +1,26 @@
 .about__container {
-  display: grid;
-  grid-template-columns: 35% 50%;
-  gap: 15%;
+    display: grid;
+    grid-template-columns: 35% 50%;
+    gap: 15%;
 }
 
-.about__me{
-width: 100%;
-aspect-ratio: 1/1;
-border-radius: 2rem;
-background: linear-gradient(45deg,
-transparent, 
-var(--color-primary),
-transparent
-);
-display: grid;
-place-items: center;
+.about__me {
+    width: 100%;
+    aspect-ratio: 1/1;
+    border-radius: 2rem;
+    background: linear-gradient(45deg,
+            transparent,
+            var(--color-primary),
+            transparent);
+    display: grid;
+    place-items: center;
 }
 
 .about__me-image {
-border-radius: 2rem;
-overflow: hidden;
-transform: rotate(10deg);
-transition: var(--transition);
+    border-radius: 2rem;
+    overflow: hidden;
+    transform: rotate(10deg);
+    transition: var(--transition);
 }
 
 .about__me-image:hover {
@@ -44,20 +43,18 @@ transition: var(--transition);
 
 .about__card:hover {
     background: transparent;
-    boarder-color: var(--color-primary-variant);
+    border-color: var(--color-primary-variant);
     background: var(--color-background-variant);
     cursor: default;
 }
 
 .about__icon {
-    /* color: black !important; */
-    padding: 3rem 0 0 0;
-    font-size: 1.4rem;
-    margin-bottom: 1rem;
-    color: beige;
+   color: beige;
+   margin: 5px;
+   margin-top: 10px;
 }
 
-.about__card h5{
+.about__card h5 {
     font-size: 0.95rem;
 }
 
@@ -81,49 +78,52 @@ transition: var(--transition);
 }
 
 .about__text {
-    text-align: center; /* Center-align the text */
+    text-align: center;
+    /* Center-align the text */
 }
 
 .about__text .btn {
-    display: inline-block; /* Make the button a block element */
-    margin-top: 1rem; /* Adjust the top margin as needed */
+    display: inline-block;
+    /* Make the button a block element */
+    margin-top: 1rem;
+    /* Adjust the top margin as needed */
 }
 
 
 /* Making it resposive for tablets */
-@media screen and (max-width: 1028px){
-    .about__container{
+@media screen and (max-width: 1028px) {
+    .about__container {
         grid-template-columns: 1fr;
         gap: 0;
     }
 
-    .about__me{
+    .about__me {
         width: 50%;
         margin: 2rem auto 4rem;
     }
 
-    .about__content p{
+    .about__content p {
         margin: 1rem 0 1.5rem;
     }
 }
 
 /* Making it resposive for mobile */
-@media screen and (max-width: 600px){
-   .about__me{
-    width: 65%;
-    margin: 0 auto 3rem;
-   }
-
-   .about__cards{
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
-   }
-
-   .about__content{
-    text-align: center;
+@media screen and (max-width: 600px) {
+    .about__me {
+        width: 65%;
+        margin: 0 auto 3rem;
     }
 
-    .about__content p{
+    .about__cards {
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+    }
+
+    .about__content {
+        text-align: center;
+    }
+
+    .about__content p {
         margin: 1.5rem 0;
     }
 }
